# transmogriFX_bela

./: CMakeLists.txt
src/: Sustainer.cpp  Sustainer.h  adsr.cpp  adsr.h  biquad.cpp  biquad.h  constants.cpp  constants.h  envelope_filter.cpp  envelope_filter.h  eq.cpp  eq.h  fb_compressor.cpp  fb_compressor.h  flange.cpp  flange.h  hard_clip.txt  iir_1pole.cpp  iir_1pole.h  inductorwah.cpp  inductorwah.h  klingon.cpp  klingon.h  kot_tonestack.cpp  kot_tonestack.h  lfo.cpp  lfo.h  output_limit.txt  overdrive.cpp  overdrive.h  pareq.cpp  pareq.h  phaser.cpp  phaser.h  read_vi_trace.cpp  read_vi_trace.h  render.cpp  reverb.cpp  reverb.h  sample_hold_modulator.cpp  (+8 more)
